<resources>
    <string name="app_name">My Application</string>

    <!-- Welcome  -->

    <string name="welcome_login_message">Oyun puanların ile üçbinin üzerinde kripto para al sat.</string>
    <string name="welcome_login_message_two">Oyun oynayarak trade etmeyi öğren.</string>
    <string name="welcome_activity_sign_in_button">Giriş Yap</string>


    <!-- Register  -->
    <string name="welcome_register_activity_firstName">Adınız</string>
    <string name="welcome_register_activity_secondName">Soyadınız</string>
    <string name="welcome_register_activity_email">E-Posta Adresiniz</string>
    <string name="welcome_register_activity_password">Şifreniz</string>
    <string name="welcome_register_activity_againpassword">Şifre Tekrar</string>
    <string name="welcome_register_activity_btn">KAYDOL</string>

    !-- SiginIn -->
    <string name="welcome_SiginIn_activity_btn">Giriş Yap</string>
    <string name="welcome_SiginIn_activity_email">E-Posta Adresiniz</string>
    <string name="welcome_SiginIn_activity_password">Şifreniz</string>
    <string name="layout_get_information">Kazancına göre; belirlenmiş algoritmada(her $100 kazancında 10 puan portföyüne eklenir;her $100 kaybettiğinde portföyünden 10 puan eksilir ), kripto para dünyasında al sat yaparak  puanları topla ilk sıralara yerleş ve bunları yaparaken öğren,piyasadan haberdar ol ,unutma bu sadece biir oyun.. </string>


    <string name="stock_details_list_item_name">Name</string>
    <string name="stock_details_list_item_value">Value</string>

    <string name="validation_default">Boş bırakılamaz</string>
    <string name="validation_email">Geçerli bir e-posta adresi girin</string>
    <string name="email_exist_error">Bu e-posta adresi kullanılmaktadır</string>
    <string name="validation_name_min_character">Kullanıcı adı en az 3 karakter olabilir</string>
    <string name="validation_surname_min_character">Soyadı en az 3 karakter olabilir</string>
    <string name="validation_password_min_character">Şifre en az 6 karakter olabilir</string>
    <string name="validation_password_again_incompatible">Şifreler uyuşmuyor</string>
    <string name="validation_user">Böyle bir kullanıcı yok, kullanıcı oluşturun.</string>

</resources>