<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<ImageView
    android:id="@+id/welcome_img"
    android:layout_width="250dp"
    android:layout_height="50dp"
    android:src="@drawable/img_welcome_logo"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="280dp"
    />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >
        <TextView
           android:layout_marginBottom="30dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/welcome_login_message"
            android:textColor="@color/primary_dark_text"
            android:fontFamily="casual"
            android:textSize="23dp"
            android:layout_marginLeft="25dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_login_message_two"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_marginLeft="15dp"
            android:fontFamily="sans-serif-black"
            android:layout_marginRight="12dp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btnWelcomeSignIn"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:background="@drawable/selector_secondary_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="270dp"
        android:text="@string/welcome_activity_sign_in_button"
        android:textColor="@color/white"
        android:textSize="18dp"

        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="90dp"
            android:textSize="20dp"
            android:text="Hesabınız Yoksa"
            android:fontFamily="sans-serif-black"
            android:layout_marginBottom="150dp"
            android:textColor="@color/white"
            />

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textSize="20dp"
        android:text="Üye Olun.."
        android:fontFamily="sans-serif-black"
        android:textColor="@color/primary"
        android:layout_marginBottom="150dp"
        android:layout_marginLeft="245dp"
        />

</RelativeLayout>